--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,9 @@
   "dependencies": {
     "jquery-ui": "^1.11.4",
     "three.js": "^0.82.0",
-    "js-priority-queue": "^0.1.5"
+    "js-priority-queue": "^0.1.5",
+    "lodash": "^4.17.4",
+    "murmurHash3js": "murmurhash3js#^3.0.0"
   },
   "resolutions": {
     "three.js": "^0.82.0"
