--- a/bower.json
+++ b/bower.json
@@ -19,8 +19,7 @@
     "jquery-ui": "^1.11.4",
     "three.js": "^0.82.0",
     "js-priority-queue": "^0.1.5",
-    "lodash": "^4.17.4",
-    "murmurHash3js": "murmurhash3js#^3.0.0"
+    "lodash": "^4.17.4"
   },
   "resolutions": {
     "three.js": "^0.82.0"
